# bulkyBERT

./: .RData  .Rhistory  .gitignore  README.md  Visualize Reconstructions.ipynb  pyproject.toml  visualize_cae.py
R/: reformat_shoemaker.R  reformat_varoquaux.R
code/: clustering_convolutional_autoencoder.py  save_to_csvgz.R  save_to_hdf5.R  sgnesR_simulations.R  simulations_datageneration.R  transformer_model.py
code/attention_model/: Attention.py  CustomSchedule.py  Decoder.py  Encoder.py  FeedForward.py  PositionalEmbedding.py  Transofmer.py
code/clustering_model/: ConvolutionalAutoEncoder.py  SoftLabels.py
code/preprocess/: load_data.py
code/simulations/: simulations_erdosrenyigame.R
code/simulations/old/: sgnesR_simulations.R
data/: varoquaux.h5  varoquaux_leaf.h5  varoquaux_root.h5
data/data_simulated/: .RData  sim_erdosrenyi.h5  sim_gene_expression.h5  sim_gene_expression_1.h5  sim_gene_expression_2.h5  sim_periodic_signal.h5
data/evaluation/: clustering_evaluation.csv  varoquaux.csv
data/models/varoquaux_encoder_3_clusters/: fingerprint.pb  keras_metadata.pb  saved_model.pb
data/models/varoquaux_model_3_clusters/: fingerprint.pb  (+2 more)
src/: clustering_convolutional_autoencoder.py  initial_eda.R  reformat_shoemaker.R  shoemaker_analysis.py  varoquaux_pipeline.py  visualize_cae.py
src/clustering_model/: ConvolutionalAutoEncoder.py  GeneClusteringModel.py  SoftLabels.py
src/plotting/: latent_pca.py  latent_tsne.py
src/preprocess/: load_data.py  load_periodic_sims.py
src/simulations/: simulations_erdosrenyigame.R  simulations_periodic_signal.R
(+54 files in other folders)
