[tool.poetry]
name = "bulkybert"
version = "0.1.0"
description = ""
authors = [
    "Julian Stamp <julian.d.stamp@gmail.com>",
    "Cecile <email>",
    "Blake <email>"
]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
tensorflow = "^2.12.0"
numpy = "<1.24"
h5py = "^3.8.0"
matplotlib = "^3.7.1"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
